исправляет некоторые ошибки из предидущего дз

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section>
-            <div class="hero">
+            <div class="container hero">
                 <div class="h1">
                     <h1>Эффективные решения для вашего бизнеса</h1>    
                 </div>
@@ -42,8 +42,8 @@
             </div>
         </section>
         <section class="section">
-            <h2 hidden>преимущества</h2>
-            <div class="container">
+            <div class="container"></div>
+                <h2 hidden>преимущества</h2>
                 <ul class="about-us-list about-us-list-indent">
                     <li class="about-us">
                             <h3 class="list-of-benefits">Внимание к деталям</h3>
@@ -63,11 +63,10 @@
                     </li>
                 </ul>
             </div>
-            
         </section>
         <section class="section section-images">
-            <h2 class="visible-title">Чем мы занимаемся</h2>
             <div class="container">
+                <h2 class="visible-title">Чем мы занимаемся</h2>
                 <ul class="images">
                     <li class="images-indent"><img src="./images/img.jpg" alt="кодинг" width="370" height="294"></li>
                     <li class="images-indent"><img src="./images/img1.jpg" alt="стилизация" width="370" height="294" ></li>
