--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,8 @@
     </header>
     <main>
         <section class="section">
+            <div class="container"></div>
             <h1 hidden>Наши проекты</h1>
-            <div class="container">
                 <ul class="button-list">
                     <li class="button-item">
                         <button type="button" class="button">Все</button>
