исправляет ошибку в секции "преимущества"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container"></div>
+            <div class="container">
                 <h2 hidden>преимущества</h2>
                 <ul class="about-us-list about-us-list-indent">
                     <li class="about-us">
