продолжает работу с иконками

--- a/index.html
+++ b/index.html
@@ -46,18 +46,30 @@
                 <h2 hidden>преимущества</h2>
                 <ul class="about-us-list about-us-list-indent">
                     <li class="about-us">
+                            <svg class="list-of-benefits-icon" width="70" height="70">
+                                <use href="./images/sprite.svg#icon-antenna-1"></use>
+                            </svg>
                             <h3 class="list-of-benefits">Внимание к деталям</h3>
                             <p class="list-of-benefits-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>        
                     </li>
                     <li class="about-us">
+                            <svg class="list-of-benefits-icon" width="70" height="70">
+                                <use href="./images/sprite.svg#icon-clock-1"></use>
+                            </svg>
                          <h3 class="list-of-benefits">Пунктуальность</h3>
                          <p class="list-of-benefits-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>     
                     </li>
                     <li class="about-us">
+                            <svg class="list-of-benefits-icon" width="70" height="70">
+                                <use href="./images/sprite.svg#icon-diagram-1"></use>
+                            </svg>
                             <h3 class="list-of-benefits">Планирование</h3>
                             <p class="list-of-benefits-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>     
-                    </li>
+                    </li>    
                     <li class="about-us">
+                            <svg class="list-of-benefits-icon" width="70" height="70">
+                                <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                            </svg>
                              <h3 class="list-of-benefits">Современные технологии</h3>
                              <p class="list-of-benefits-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
                     </li>
@@ -225,6 +237,55 @@
                                 </li>
                             </ul>
                         </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="visible-title">Постоянные клиенты</h2>
+                <ul class="clients">
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="clients-link" href="">
+                            <svg class="clients-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-logo5"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
