заканчивает работу с векторной графикой с некоторыми неточностями
Не догадался как настроить позиционирование иконок в хедере и блока соцсетей в футере

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
                     </ul>
             </nav>
             <ul class="contacts">
-               <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+               <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">
+                <svg class="mail-icon" width="16" height="12">
+                    <use href="./images/sprite.svg#icon-envelopehover"></use>
+                </svg>   
+                    info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="contacts-link" href="tel:+380961111111">
+                    <svg class="tel-icon" width="10" height="16">
+                        <use href="./images/sprite.svg#icon-vector"></use>
+                    </svg>
+                    +38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -45,33 +53,41 @@
             <div class="container">
                 <h2 hidden>преимущества</h2>
                 <ul class="about-us-list about-us-list-indent">
-                    <li class="about-us">
-                            <svg class="list-of-benefits-icon" width="70" height="70">
+                    <li class="about-us about-us-antenna">
+                        <div class="about-us-picture">
+                            <svg class="about-us-picture-item" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna-1"></use>
                             </svg>
-                            <h3 class="list-of-benefits">Внимание к деталям</h3>
-                            <p class="list-of-benefits-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>        
+                        </div>
+                        <h3 class="list-of-benefits">Внимание к деталям</h3>
+                        <p class="list-of-benefits-description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>        
                     </li>
-                    <li class="about-us">
-                            <svg class="list-of-benefits-icon" width="70" height="70">
+                    <li class="about-us about-us-clock">
+                        <div class="about-us-picture">
+                            <svg class="about-us-picture-item" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-clock-1"></use>
                             </svg>
+                        </div>
                          <h3 class="list-of-benefits">Пунктуальность</h3>
                          <p class="list-of-benefits-description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>     
                     </li>
-                    <li class="about-us">
-                            <svg class="list-of-benefits-icon" width="70" height="70">
+                    <li class="about-us about-us-diagram">
+                        <div class="about-us-picture">
+                            <svg class="about-us-picture-item" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram-1"></use>
                             </svg>
-                            <h3 class="list-of-benefits">Планирование</h3>
-                            <p class="list-of-benefits-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>     
+                        </div>
+                        <h3 class="list-of-benefits">Планирование</h3>
+                        <p class="list-of-benefits-description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>     
                     </li>    
-                    <li class="about-us">
-                            <svg class="list-of-benefits-icon" width="70" height="70">
+                    <li class="about-us about-us-astronaut">
+                        <div class="about-us-picture">
+                            <svg class="about-us-picture-item" width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut-1"></use>
                             </svg>
-                             <h3 class="list-of-benefits">Современные технологии</h3>
-                             <p class="list-of-benefits-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
+                        </div>
+                        <h3 class="list-of-benefits">Современные технологии</h3>
+                        <p class="list-of-benefits-description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>        
                     </li>
                 </ul>
             </div>
@@ -87,8 +103,8 @@
             </div>
         </section>
         <section class="section team">
-            <h2 class="visible-title">Наша команда</h2>
             <div class="container">
+            <h2 class="visible-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="employess-card">
                         <img src="./images/img3.jpg" alt="Игорь Демьяненко" width="270" height="260" >
@@ -245,42 +261,42 @@
             <div class="container">
                 <h2 class="visible-title">Постоянные клиенты</h2>
                 <ul class="clients">
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li>
+                    <li class="clients-link-item">
                         <a class="clients-link" href="">
                             <svg class="clients-icon" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo5"></use>
@@ -301,6 +317,39 @@
                     <li class="footer-list"><a class="contacts-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
+        </div>
+        <div class="container footer-container-social-netwok">
+            <p class="footer-social-list-text">присоединяйтесь</p>
+            <ul class="social-list">
+                <li class="social-list-item">
+                    <a class="footer-social-list-link" href="">
+                        <svg class="footer-social-link" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-instagram2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a class="footer-social-list-link" href="">
+                        <svg class="footer-social-link" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-vector5"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a class="footer-social-list-link" href="">
+                        <svg class="footer-social-link" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-vector6"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a class="footer-social-list-link" href="">
+                        <svg class="footer-social-link" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-linkedin1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
