исправляет ошибки в позиционировании

--- a/index.html
+++ b/index.html
@@ -308,8 +308,11 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer-container">
-            <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
+        <section class="container footer-section">
+            <div class="footer-container">
+                <div class="logo-footer-block">
+                    <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
+                </div>
             <address>    
                 <ul>
                     <li class="footer-list address">г. Киев, пр-т Леси Украинки, 26</li>
@@ -318,7 +321,7 @@
                 </ul>
             </address>
         </div>
-        <div class="container footer-container-social-netwok">
+        <div class="footer-container-social-netwok">
             <p class="footer-social-list-text">присоединяйтесь</p>
             <ul class="social-list">
                 <li class="social-list-item">
@@ -351,6 +354,7 @@
                 </li>
             </ul>
         </div>
+        </section>      
     </footer>
 </body>
 </html>
