--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <nav class="site-nav">
                 <a href="./index.html" class="logo">Web<span>Studio</span> </a>
                     <ul class="nav-links">
-                        <li class="nav-links-item"><a class="nav-links-link current" href="./index.html" >Студия</a></li>
-                        <li class="nav-links-item"><a class="nav-links-link" href="./portfolio.html">Портфолио</a></li>
+                        <li class="nav-links-item"><a class="nav-links-link" href="./index.html" >Студия</a></li>
+                        <li class="nav-links-item"><a class="nav-links-link current" href="./portfolio.html">Портфолио</a></li>
                         <li class="nav-links-item"><a class="nav-links-link" href="#">Контакты</a></li>
                     </ul>
             </nav>
@@ -44,7 +44,7 @@
             <h1 hidden>Наши проекты</h1>
                 <ul class="button-list">
                     <li class="button-item">
-                        <button type="button" class="button">Все</button>
+                        <button type="button" class="button all">Все</button>
                     </li>
                     <li class="button-item">
                         <button type="button" class="button">Веб-сайты</button>
@@ -128,8 +128,11 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container footer-container">
-            <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
+        <section class="container footer-section">
+            <div class="footer-container">
+                <div class="logo-footer-block">
+                    <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
+                </div>
             <address>    
                 <ul>
                     <li class="footer-list address">г. Киев, пр-т Леси Украинки, 26</li>
@@ -138,7 +141,7 @@
                 </ul>
             </address>
         </div>
-        <div class="container footer-container-social-netwok">
+        <div class="footer-container-social-netwok">
             <p class="footer-social-list-text">присоединяйтесь</p>
             <ul class="social-list">
                 <li class="social-list-item">
@@ -171,6 +174,7 @@
                 </li>
             </ul>
         </div>
+        </section>
     </footer>
 </body>
 </html>
