исправляет ошибки в семантике и цвет иконок, и бордер

--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,7 @@
     </main>
     <footer class="footer">
         <section class="container footer-section">
+            <h2 hidden>контакты</h2>
             <div class="footer-container">
                 <div class="logo-footer-block">
                     <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
@@ -174,7 +175,7 @@
                 </li>
             </ul>
         </div>
-        </section>
+        </section>      
     </footer>
 </body>
 </html>
