--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section>
-            <div class="container hero">
+            <div class="hero">
                 <div class="h1">
                     <h1>Эффективные решения для вашего бизнеса</h1>    
                 </div>
@@ -309,6 +309,7 @@
     </main>
     <footer class="footer">
         <section class="container footer-section">
+            <h2 hidden>контакты</h2>
             <div class="footer-container">
                 <div class="logo-footer-block">
                     <a href="./index.html" class="logo-footer">Web<span class="logo-studio-footer">Studio</span> </a>
